# incremental_state_machine

./: .gitignore  Makefile  README.md  context.md  pyproject.toml  requirements.txt  state_machine.txt  tool_spec.0.1.0.yaml
notebooks/: toy_notebook.ipynb
qavs/: context.0.1.0.jsonl  db_learn.0.1.0.jsonl  dev_snapshot.0.1.0.jsonl
src/incremental_state_machine/domain/models/: context.py  context_projections.py  projections.py  snapshot.py  snapshot_projections.py
src/incremental_state_machine/entry_points/cli/: __main__.py  context_cli.py  db_learn_cli.py  incremental_state_machine_cli.py  snapshot_cli.py
var/spec/: databricks.0.1.0.yaml
var/spec/design/contexts/: test_context.0.1.0.yaml
var/spec/design/snapshots/: another.1.0.0.yaml  comprehensive.1.0.0.yaml  default.0.1.0.yaml  test.0.1.0.yaml  test.0.2.0.yaml
var/spec/sessions/: databricks.0.1.0.yaml
var/state/: databricks_todo.jsonl  question.0.1.0.yaml
var/state/vectors/: db_learn_0.1.0.yaml
